erDiagram
  roles ||--o{ user_master : "role"
  user_master ||--o{ user_master : "sales_coordinator_id"

  user_master {
    INT id PK
    INT role FK
    VARCHAR username
    VARCHAR name
    VARCHAR email
    VARCHAR password
    VARCHAR mobile_number
    INT sales_coordinator_id FK
    VARCHAR customer_code
    VARCHAR created_by
    TIMESTAMP created_at
    TIMESTAMP updated_at
    TIMESTAMP deleted_at
    TIMESTAMP last_login_at
    INT session_version
  }

  roles {
    INT id PK
    VARCHAR role_name
    VARCHAR status
    TIMESTAMP deleted_at
  }

  customer_master_sync {
    INT id PK
    VARCHAR customer_code
    VARCHAR added_by
    VARCHAR updated_by
    TIMESTAMP created_at
    TIMESTAMP updated_at
    TIMESTAMP deleted_at
  }

  customer_master {
    VARCHAR cuno PK
    VARCHAR cuname
  }

  customer_master_sync ||--|| customer_master : "customer_code = cuno"
  user_master }o--|| customer_master_sync : "customer_code"
